@@ -24,9 +24,8 @@ import com.hazelcast.internal.config.override.SystemPropertiesConfigProvider.Sys
 import com.hazelcast.logging.ILogger;
 import com.hazelcast.logging.Logger;
 
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Map;
+import java.util.Set;
 
 import static com.hazelcast.internal.config.LicenseKey.maskLicense;
 import static com.hazelcast.internal.config.override.PropertiesToNodeConverter.propsToNode;
@@ -83,7 +82,7 @@ public class ExternalConfigurationOverride {
     }
 
     private <T> T overwrite(T config, ConfigConsumer<T> configProcessor, ConfigProvider... providers) {
-        ConfigOverrideValidator.validate(new HashSet<>(Arrays.asList(providers)));
+        ConfigOverrideValidator.validate(Set.of(providers));
 
         for (ConfigProvider configProvider : providers) {
             Map<String, String> properties = configProvider.properties();
