@@ -22,10 +22,11 @@ import com.hazelcast.config.IndexConfig;
 import com.hazelcast.config.IndexType;
 import com.hazelcast.config.MapConfig;
 import com.hazelcast.core.HazelcastInstance;
-import com.hazelcast.map.IMap;
 import com.hazelcast.internal.serialization.impl.portable.PortableTest.ChildPortableObject;
 import com.hazelcast.internal.serialization.impl.portable.PortableTest.GrandParentPortableObject;
 import com.hazelcast.internal.serialization.impl.portable.PortableTest.ParentPortableObject;
+import com.hazelcast.internal.util.UuidUtil;
+import com.hazelcast.map.IMap;
 import com.hazelcast.query.Predicate;
 import com.hazelcast.query.PredicateBuilder.EntryObject;
 import com.hazelcast.query.Predicates;
@@ -43,7 +44,6 @@ import com.hazelcast.test.HazelcastTestSupport;
 import com.hazelcast.test.TestHazelcastInstanceFactory;
 import com.hazelcast.test.annotation.ParallelJVMTest;
 import com.hazelcast.test.annotation.QuickTest;
-import com.hazelcast.internal.util.UuidUtil;
 import org.junit.Test;
 import org.junit.experimental.categories.Category;
 import org.junit.runner.RunWith;
@@ -53,7 +53,6 @@ import java.util.Arrays;
 import java.util.Calendar;
 import java.util.Collection;
 import java.util.Date;
-import java.util.HashSet;
 import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.List;
@@ -72,7 +71,7 @@ import static org.junit.Assert.fail;
 public class QueryBasicTest extends HazelcastTestSupport {
 
     protected Config getSmallConfig() {
-        return smallInstanceConfig();
+        return shrinkInstanceConfig(getConfig());
     }
 
     protected void configureMap(String name, Config config) {
@@ -416,7 +415,7 @@ public class QueryBasicTest extends HazelcastTestSupport {
         IMap<String, String> map = instance.getMap("queryWithThis");
         map.addIndex(IndexType.HASH, "this");
         for (int i = 0; i < 1000; i++) {
-            map.put("" + i, "" + i);
+            map.put("" + i, String.valueOf(i));
         }
         Predicate predicate = Predicates.newPredicateBuilder().getEntryObject().get("this").equal("10");
         Collection<String> set = map.values(predicate);
@@ -1153,7 +1152,7 @@ public class QueryBasicTest extends HazelcastTestSupport {
 
     @SafeVarargs
     private static <E> void assertEqualSets(Set<E> actual, E... expected) {
-        assertEquals(new HashSet<>(Arrays.asList(expected)), actual);
+        assertEquals(Set.of(expected), actual);
     }
 
 }
